# moblin-anjuta-plugin

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
po/: ChangeLog  POTFILES.in
src/: Makefile.am  anjuta-plugin-sdk.plugin.in  anjuta-plugin-sdk.ui  beaver-settings-page.c  beaver-settings-page.h  beaver-target-device.c  beaver-target-device.h  beaver-target-qemu.c  beaver-target-qemu.h  beaver-target.c  beaver-target.h  beaver-util.c  beaver-util.h  beaver.h  plugin.c  plugin.h
